--- a/app/src/main/res/layout/activity_java_sample.xml
+++ b/app/src/main/res/layout/activity_java_sample.xml
@@ -8,7 +8,7 @@
         android:id="@+id/java_startBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="start" />
+        android:text="@string/start" />
 
     <include layout="@layout/layout_result_txt" />
 
