--- a/app/src/main/res/layout/dialog_super.xml
+++ b/app/src/main/res/layout/dialog_super.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/super_dialog_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/super_dialog_ll"
     android:background="@color/colorBackground"
     android:orientation="vertical">
 
@@ -18,6 +18,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="6dp"
+            android:contentDescription="@string/zfile_cancel"
             android:padding="7dp"
             android:src="@drawable/zfile_close"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,6 +45,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="6dp"
+            android:contentDescription="@string/zfile_menu_down"
             android:padding="7dp"
             android:src="@drawable/zfile_down"
             app:layout_constraintBottom_toBottomOf="parent"
