--- a/file/src/main/res/layout/dialog_zfile_select_folder.xml
+++ b/file/src/main/res/layout/dialog_zfile_select_folder.xml
@@ -17,6 +17,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="6dp"
+            android:contentDescription="@string/zfile_cancel"
             android:padding="7dp"
             android:src="@drawable/zfile_close"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,6 +44,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="6dp"
+            android:contentDescription="@string/zfile_menu_down"
             android:padding="7dp"
             android:src="@drawable/zfile_down"
             app:layout_constraintBottom_toBottomOf="parent"
