--- a/file/src/main/res/layout/item_zfile_list_file.xml
+++ b/file/src/main/res/layout/item_zfile_list_file.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -12,11 +11,11 @@
         android:background="?selectableItemBackground"
         android:padding="@dimen/zfile_default_divider_padding">
 
-        <!-- android:transitionName="jump_File" -->
         <ImageView
             android:id="@+id/item_zfile_list_file_pic"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:contentDescription="@string/zfile_item_desc_icon"
             android:transitionName="jump_File"
             tools:src="@drawable/ic_zfile_other" />
 
@@ -32,6 +31,7 @@
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/zfile_item_desc_selected"
                 android:src="@drawable/ic_zfile_quan" />
 
             <CheckBox
