--- a/file/src/main/res/layout/item_zfile_list_folder.xml
+++ b/file/src/main/res/layout/item_zfile_list_folder.xml
@@ -18,6 +18,7 @@
             android:id="@+id/item_zfile_list_folderPic"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:contentDescription="@string/zfile_item_desc_icon"
             tools:src="@drawable/ic_zfile_folder" />
 
         <TextView
@@ -26,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/zfile_default_divider_padding"
             android:ellipsize="end"
-            android:maxLines="1"
             android:maxLength="20"
+            android:maxLines="1"
             android:textColor="@color/zfile_file_title"
             android:textSize="14sp"
             tools:text="文件夹名称" />
@@ -41,14 +42,14 @@
                 android:id="@+id/item_zfile_list_folderCountTxt"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:gravity="center"
-                tools:text="99"
-                android:visibility="gone"
-                android:textSize="11sp"
-                android:textColor="@color/zfile_title_text"
                 android:layout_gravity="center|end"
                 android:background="@drawable/zfile_count"
-                tools:ignore="SmallSp" />
+                android:gravity="center"
+                android:textColor="@color/zfile_title_text"
+                android:textSize="11sp"
+                android:visibility="gone"
+                tools:ignore="SmallSp"
+                tools:text="99" />
 
         </FrameLayout>
 
