去掉lottie，添加svg无数据缺省图

--- a/file/src/main/res/layout/activity_zfile_list.xml
+++ b/file/src/main/res/layout/activity_zfile_list.xml
@@ -60,13 +60,12 @@
             android:background="@color/colorBackground"
             android:visibility="gone">
 
-            <com.airbnb.lottie.LottieAnimationView
+            <ImageView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:lottie_autoPlay="true"
-                app:lottie_fileName="weather_no_data.json"
-                app:lottie_loop="true" />
+                android:contentDescription="@string/zfile_title"
+                android:src="@drawable/ic_no_data" />
 
         </FrameLayout>
 
