--- a/file/src/main/res/layout/activity_search.xml
+++ b/file/src/main/res/layout/activity_search.xml
@@ -85,13 +85,12 @@
             android:paddingHorizontal="24dp"
             android:visibility="gone">
 
-            <com.airbnb.lottie.LottieAnimationView
+            <ImageView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:lottie_autoPlay="true"
-                app:lottie_fileName="weather_no_data.json"
-                app:lottie_loop="true" />
+                android:contentDescription="@string/zfile_title"
+                android:src="@drawable/ic_no_data" />
 
         </FrameLayout>
 
