--- a/file/src/main/res/layout/fragment_zfile_qw.xml
+++ b/file/src/main/res/layout/fragment_zfile_qw.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,8 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:textColor="@color/title_tv_cancel_text_color"
-            android:text="@string/zfile_qw_loading" />
+            android:text="@string/zfile_qw_loading"
+            android:textColor="@color/title_tv_cancel_text_color" />
 
     </LinearLayout>
 
@@ -43,13 +42,12 @@
         android:background="@color/colorBackground"
         android:visibility="gone">
 
-        <com.airbnb.lottie.LottieAnimationView
+        <ImageView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:lottie_autoPlay="true"
-            app:lottie_fileName="weather_no_data.json"
-            app:lottie_loop="true" />
+            android:contentDescription="@string/zfile_title"
+            android:src="@drawable/ic_no_data" />
 
     </FrameLayout>
 
