--- a/file/src/main/res/layout/dialog_zfile_rename.xml
+++ b/file/src/main/res/layout/dialog_zfile_rename.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/zfile_dialog_tv_title"
         style="@style/Base.DialogWindowTitle.AppCompat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
