--- a/file/src/main/res/layout/dialog_zfile_sort.xml
+++ b/file/src/main/res/layout/dialog_zfile_sort.xml
@@ -5,21 +5,22 @@
     android:orientation="vertical">
 
     <TextView
-        style="@style/Base.DialogWindowTitle.AppCompat"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="10dp"
+        android:layout_gravity="center"
+        android:paddingHorizontal="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="10dp"
         android:text="@string/zfile_sort_title"
-        android:textColor="@color/zfile_file_title" />
+        android:textColor="@color/zfile_file_title"
+        android:textSize="16sp" />
 
     <RadioGroup
         android:id="@+id/zfile_sortGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingHorizontal="20dp">
 
         <RadioButton
             android:id="@+id/zfile_sort_by_default"
